k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: aisaas
  name: ai-saas-backend
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: sadishaws/ai-saas-backend:latest
        ports:
        - containerPort: 5000
