k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: aisaas
  name: ai-saas-frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: sadishaws/ai-saas-frontend:latest
        ports:
        - containerPort: 80
