k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: aisaas
  name: backend-service
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
