k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: aisaas
  name: frontend-service
spec:
  selector:
    app: frontend
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
